2004-01-11  Paolo Nenzi <p.nenzi@ieee.org>

	*   src/spicelib/analysis/*: Removed redundant includes. File stdio.h
	    is already included via ngspice.h.

2004-01-10  Paolo Nenzi <p.nenzi@ieee.org>

	*   configure.in: changed version to rework-15pre2.

	*   src/frontend/{com_history.c, cpitf.c, display.h, evaluate.c,
	    inpcom.c, misccoms.c, parser/glob.c, plotting/x11.c, resource.c,
	    runcoms.c, signal_handler.c, subckt.c, variable.c}
	    src/include/{ftedev.h, ngspice.h}
	    src/misc{ivars.c, Makefile.am, string.c, tilde.c, tilde.h, util.c,
	    util.h}
	    src/{main.c, nghelp.c, ngmultidec.c}
	    configure.in:
	    
	    Applied Stuart's patch tclspice-0.2.14_12-03-2003.diff.gz but
	    with libreadline disabled by default. (Stuart Brorson 
	    <sdb@cloud9.net>).

	*   Fixed makefiles in src/xspice/icm and src/xspice/cmpp to make 
	    distclean without barfing. (Stuart Brorson <sdb@cloud9.net>).

	*   configure.in 
	    src/xspice/cmpp/Makefile src/xspice/cmpp/Makefile.in:
	    Make configure automatically set paths for lex yacc and 
	    install dir (Stefan Jones <stefan.jones@multigig.com>).

	*  src/Makefile.am Makefile.am README.Tcl
	   src/xspice/README src/xspice/icm/README
	   src/xspice/icm/spice2poly/icm_spice2poly/README:
	   Updated to reflect codemodel support is now complete
	   (Stefan Jones <stefan.jones@multigig.com>).

	*  src/xspice/ipc/ipc.c:
	   Remove linux specific includes which are not needed
	   (Stefan Jones <stefan.jones@multigig.com>).

	*  src/xspice/{Makefile.am,xspice.c} 
	   src/xspice/cm/{cmexport.c,Makefile.am}:
	   Moved the xspice library hooks into the cm directory
	   (Stefan Jones <stefan.jones@multigig.com>).

	*  src/xspice/enh/enhtrans.c src/xspice/mif/mif_inp2.c:
	   Fixed version from Stuart Brorson <sdb@cloud9.net>, 
	   http://www.brorson.com/gEDA/ngspice/

	*  src/spinit, arc/spinit.in, configure.in: parametrized spinit paths
	   for codemodel devices.
