@@ -11,3 +11,4 @@ extern int TXLmDelete(GENmodel**,IFuid,GENmodel*);
 extern int TXLmParam(int,IFvalue*,GENmodel*);
 extern int TXLparam(int,IFvalue*,GENinstance*,IFvalue*);
 extern int TXLsetup(SMPmatrix*,GENmodel*,CKTcircuit*,int*);
+extern int TXLunsetup(GENmodel*, CKTcircuit*);
